--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <header>  
+  <header>
     <nav>
       <a href="about.html"><button class="active"><h1>About Me</h1></button></a>
       <a href="portfolio.html"><button><h1>Portfolio</h1></button></a>
@@ -16,202 +16,197 @@
     </nav>
   </header>
   
-    <main>
-      <h1 class="main-title">Artur Kashuba<br> <span class="subtitle">Unity Developer</span></h1>
-        <h2 style = "margin-top: 0px;">Summary</h2>
-        <p>
-          Unity Developer with 4+ years of experience. I have delivered 15+ published games and achieved 100K+ downloads in Play Market. 
-          Expertise in scalable architecture, multiplayer systems, and team management. 
-          Proficient in end-to-end development, from prototyping to launch, across PC, mobile, and VR platforms. 
-        </p>
+  <main>
+    <h1 class="main-title">Artur Kashuba<br> <span class="subtitle">Unity Developer</span></h1>
+    <h2>Summary</h2>
+    <p>
+      Unity Developer with 4+ years of experience. I have delivered 15+ published games and achieved 100K+ downloads on Play Market. 
+      Expertise in scalable architecture, multiplayer systems, and team management. 
+      Proficient in end-to-end development, from prototyping to launch, across PC, mobile, and VR platforms. 
+    </p>
 
-        <h2>Skills</h2>
-        <div class="skills-container">
-          <div class="skill-card">
-            <img class = "skill-icon" src="Resources/Icons/Skills/crown.png" alt="Unity3D Icon" class="skill-icon">
-            <div class="skill-details">
-              <h3>Unity3D</h3>
-              <p>4 years experience</p>
-            </div>
-          </div>
-          <div class="skill-card">
-            <img src="Resources/Icons/Skills/c-sharp.png" alt="C# Icon" class="skill-icon">
-            <div class="skill-details">
-              <h3>C#</h3>
-              <p>6 years experience</p>
-            </div>
-          </div>
-          <div class="skill-card">
-            <img src="Resources/Icons/Skills/c-plus.png" alt="C++ Icon" class="skill-icon">
-            <div class="skill-details">
-              <h3>C/C++</h3>
-              <p>4 years experience</p>
-            </div>
-          </div>
-          <div class="skill-card">
-            <img src="Resources/Icons/Skills/mobile.png" alt="Mobile Icon" class="skill-icon">
-            <div class="skill-details">
-              <h3>Mobile</h3>
-              <p>Android and iOS</p>
-            </div>
-          </div>
-          <div class="skill-card">
-            <img src="Resources/Icons/Skills/multiplayer.png" alt="Multiplayer Icon" class="skill-icon">
-            <div class="skill-details">
-              <h3>Multiplayer</h3>
-              <p>Photon or custom solution</p>
-            </div>
-          </div>
-          <div class="skill-card">
-            <img src="Resources/Icons/Skills/vr.png" alt="VR Icon" class="skill-icon">
-            <div class="skill-details">
-              <h3>AR/VR</h3>
-              <p>Oculus, SteamVR, HTC Vive</p>
-            </div>
-          </div>
-          <div class="skill-card">
-            <img src="Resources/Icons/Skills/analytics.png" alt="Analytics Icon" class="skill-icon">
-            <div class="skill-details">
-              <h3>Analytics</h3>
-              <p>Firebase, Amplitude, UGS</p>
-            </div>
-          </div>
-          <div class="skill-card">
-            <img src="Resources/Icons/Skills/editor.png" alt="Unity Editor Scripting Icon" class="skill-icon">
-            <div class="skill-details">
-              <h3>Editor Scripting</h3>
-              <p>Custom engine tools</p>
-            </div>
-          </div>
-          <div class="skill-card">
-            <img src="Resources/Icons/Skills/monetization.png" alt="Monetization Icon" class="skill-icon">
-            <div class="skill-details">
-              <h3>Monetization</h3>
-              <p>Google AdMob and Unity Ads</p>
-            </div>
-          </div>
-          <div class="skill-card">
-            <img src="Resources/Icons/Skills/vfx.png" alt="VFX Icon" class="skill-icon">
-            <div class="skill-details">
-              <h3>VFX</h3>
-              <p>Particles, Light Baking, Post-processing, Shadering</p>
-            </div>
-          </div>
-          <div class="skill-card">
-            <img src="Resources/Icons/Skills/optimization.png" alt="Optimization Icon" class="skill-icon">
-            <div class="skill-details">
-              <h3>Optimization</h3>
-              <p>Profile Analysis, batching</p>
-            </div>
-          </div>
-          <div class="skill-card">
-            <img src="Resources/Icons/Skills/git.png" alt="Git Icon" class="skill-icon">
-            <div class="skill-details">
-              <h3>Git</h3>
-              <p>branch, pull request</p>
-            </div>
-          </div>
+    <h2>Skills</h2>
+    <div class="skills-container">
+      <div class="skill-card">
+        <img src="Resources/Icons/Skills/crown.png" alt="Unity3D Icon" class="skill-icon">
+        <div class="skill-details">
+          <h3>Unity3D</h3>
+          <p>4 years experience</p>
         </div>
+      </div>
+      <div class="skill-card">
+        <img src="Resources/Icons/Skills/c-sharp.png" alt="C# Icon" class="skill-icon">
+        <div class="skill-details">
+          <h3>C#</h3>
+          <p>6 years experience</p>
+        </div>
+      </div>
+      <div class="skill-card">
+        <img src="Resources/Icons/Skills/c-plus.png" alt="C++ Icon" class="skill-icon">
+        <div class="skill-details">
+          <h3>C/C++</h3>
+          <p>4 years experience</p>
+        </div>
+      </div>
+      <div class="skill-card">
+        <img src="Resources/Icons/Skills/mobile.png" alt="Mobile Icon" class="skill-icon">
+        <div class="skill-details">
+          <h3>Mobile</h3>
+          <p>Android and iOS</p>
+        </div>
+      </div>
+      <div class="skill-card">
+        <img src="Resources/Icons/Skills/multiplayer.png" alt="Multiplayer Icon" class="skill-icon">
+        <div class="skill-details">
+          <h3>Multiplayer</h3>
+          <p>Photon or custom solution</p>
+        </div>
+      </div>
+      <div class="skill-card">
+        <img src="Resources/Icons/Skills/vr.png" alt="VR Icon" class="skill-icon">
+        <div class="skill-details">
+          <h3>AR/VR</h3>
+          <p>Oculus, SteamVR, HTC Vive</p>
+        </div>
+      </div>
+      <div class="skill-card">
+        <img src="Resources/Icons/Skills/analytics.png" alt="Analytics Icon" class="skill-icon">
+        <div class="skill-details">
+          <h3>Analytics</h3>
+          <p>Firebase, Amplitude, UGS</p>
+        </div>
+      </div>
+      <div class="skill-card">
+        <img src="Resources/Icons/Skills/editor.png" alt="Unity Editor Scripting Icon" class="skill-icon">
+        <div class="skill-details">
+          <h3>Editor Scripting</h3>
+          <p>Custom engine tools</p>
+        </div>
+      </div>
+      <div class="skill-card">
+        <img src="Resources/Icons/Skills/monetization.png" alt="Monetization Icon" class="skill-icon">
+        <div class="skill-details">
+          <h3>Monetization</h3>
+          <p>Google AdMob and Unity Ads</p>
+        </div>
+      </div>
+      <div class="skill-card">
+        <img src="Resources/Icons/Skills/vfx.png" alt="VFX Icon" class="skill-icon">
+        <div class="skill-details">
+          <h3>VFX</h3>
+          <p>Particles, Light Baking, Post-processing, Shadering</p>
+        </div>
+      </div>
+      <div class="skill-card">
+        <img src="Resources/Icons/Skills/optimization.png" alt="Optimization Icon" class="skill-icon">
+        <div class="skill-details">
+          <h3>Optimization</h3>
+          <p>Profile Analysis, batching</p>
+        </div>
+      </div>
+      <div class="skill-card">
+        <img src="Resources/Icons/Skills/git.png" alt="Git Icon" class="skill-icon">
+        <div class="skill-details">
+          <h3>Git</h3>
+          <p>branch, pull request</p>
+        </div>
+      </div>
+    </div>
         
-        <h2>Work Experience</h2>
-<div class="timeline">
-  <!-- Item 1 -->
-  <div class="timeline-item">
-    <div class="timeline-marker"></div>
-    <div class="timeline-content">
-      <div class="timeline-left">
-        <h3>Lumighost Ltd</h3>
-        <p>03/2023 - 11/2024</p>
-      </div>
-      <div class="timeline-right">
-        <h3>Unity Lead Developer</h3>
-        <ul>
-          <li>Led a team of 5 developers and artists, creating scalable architecture for projects.</li>
-          <li>Mentored junior developers and improved PR workflow.</li>
-          <li>Worked with clients, providing technical consulting and project estimating.</li>
-          <li>Delivered: 3D multiplayer chess (<a href="project.html?name=Samurai%20Warlords">Samurai Warlords</a>), Katana Editor (<a href="project.html?name=Samurai%20Swords%20Store">Samurai Swords Store</a>), Ticketing application with NFT 3D models (<a href="project.html?name=NFTicket">NFTicket</a>).</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- Item 2 -->
-  <div class="timeline-item">
-    <div class="timeline-marker"></div>
-    <div class="timeline-content">
-      <div class="timeline-left">
-        <h3>Lumighost Ltd</h3>
-        <p>01/2022 - 03/2023</p>
-      </div>
-      <div class="timeline-right">
-        <h3>Unity Developer</h3>
-        <ul>
-          <li>Developed and maintained interactive games and apps</li>
-          <li>Implemented user interfaces and visual effects.</li>
-          <li>Developed: FPV shooter with procedural dungeon generator (<a href="project.html?name=Haunted%20Houses">Haunted Houses</a>), P2E Runner (<a href="project.html?name=Klee%20Run">Klee Run</a>), low-poly mobile game (<a href="project.html?name=Magic%20Swamp">Magic Swamp</a>), PvP turn-based mobile game (<a href="project.html?name=iBall">iBall</a>), SDK for collecting Analytics Data without data loss (<a href="project.html?name=RudderStack">RudderStack</a>).</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- Item 3 -->
-  <div class="timeline-item">
-    <div class="timeline-marker"></div>
-    <div class="timeline-content">
-      <div class="timeline-left">
-        <h3>Upwork Freelance</h3>
-        <p>05/2021 - 01/2022</p>
-      </div>
-      <div class="timeline-right">
-        <h3>Unity Developer</h3>
-        <ul>
-          <li>«Top Rated» status and 100% Job Success.</li>
-          <li>Collaborated with clients to define project scope, establish milestones, and deliver solutions that met or exceeded expectations.</li>
-          <li>Designed and developed: Auto Chess (<a href="project.html?name=Heroes%20Auto%20Battle">Heroes Auto Battle</a>), Fight Runner (<a href="project.html?name=Shio">Shio</a>), Flappy Bird clone (<a href="project.html?name=Flappy%20Center">Flappy Center</a>), 3D Earth map (<a href="project.html?name=DelltaP3">DelltaP3</a>), Laser Tag using Arduino (<a href="project.html?name=Wave">Wave</a>).</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-        
-
-        <h2>Education</h2>
-        <div class="education"> 
-          <h3>Software Engineering (Master) </h3>
-          <p>Taras Shevchenko National University of Kyiv</p>
-          <p>2021 - 2023</p>
+    <h2>Work Experience</h2>
+    <div class="timeline">
+      <div class="timeline-item">
+        <div class="timeline-marker"></div>
+        <div class="timeline-content">
+          <div class="timeline-left">
+            <h3>Lumighost Ltd</h3>
+            <p>03/2023 - 11/2024</p>
+          </div>
+          <div class="timeline-right">
+            <h3>Unity Lead Developer</h3>
+            <ul>
+              <li>Led a team of 5 developers and artists, creating scalable architecture for projects.</li>
+              <li>Mentored junior developers and improved PR workflow.</li>
+              <li>Worked with clients, providing technical consulting and project estimating.</li>
+              <li>Delivered: 3D multiplayer chess (<a href="project.html?name=Samurai%20Warlords">Samurai Warlords</a>), Katana Editor (<a href="project.html?name=Samurai%20Swords%20Store">Samurai Swords Store</a>), Ticketing application with NFT 3D models (<a href="project.html?name=NFTicket">NFTicket</a>).</li>
+            </ul>
+          </div>
         </div>
-        <div class="education"> 
-          <h3>Software Engineering (Bachelor) </h3>
-          <p>Taras Shevchenko National University of Kyiv</p>
-          <p>2017 - 2021</p>
+      </div>
+      <div class="timeline-item">
+        <div class="timeline-marker"></div>
+        <div class="timeline-content">
+          <div class="timeline-left">
+            <h3>Lumighost Ltd</h3>
+            <p>01/2022 - 03/2023</p>
+          </div>
+          <div class="timeline-right">
+            <h3>Unity Developer</h3>
+            <ul>
+              <li>Developed and maintained interactive games and apps.</li>
+              <li>Implemented user interfaces and visual effects.</li>
+              <li>Developed: FPV shooter with procedural dungeon generator (<a href="project.html?name=Haunted%20Houses">Haunted Houses</a>), P2E Runner (<a href="project.html?name=Klee%20Run">Klee Run</a>), low-poly mobile game (<a href="project.html?name=Magic%20Swamp">Magic Swamp</a>), PvP turn-based mobile game (<a href="project.html?name=iBall">iBall</a>), SDK for collecting Analytics Data without data loss (<a href="project.html?name=RudderStack">RudderStack</a>).</li>
+            </ul>
+          </div>
         </div>
-    </main>
-</body>
+      </div>
+      <div class="timeline-item">
+        <div class="timeline-marker"></div>
+        <div class="timeline-content">
+          <div class="timeline-left">
+            <h3>Upwork Freelance</h3>
+            <p>05/2021 - 01/2022</p>
+          </div>
+          <div class="timeline-right">
+            <h3>Unity Developer</h3>
+            <ul>
+              <li>«Top Rated» status and 100% Job Success.</li>
+              <li>Collaborated with clients to define project scope, establish milestones, and deliver solutions that met or exceeded expectations.</li>
+              <li>Designed and developed: Auto Chess (<a href="project.html?name=Heroes%20Auto%20Battle">Heroes Auto Battle</a>), Fight Runner (<a href="project.html?name=Shio">Shio</a>), Flappy Bird clone (<a href="project.html?name=Flappy%20Center">Flappy Center</a>), 3D Earth map (<a href="project.html?name=DelltaP3">DelltaP3</a>), Laser Tag using Arduino (<a href="project.html?name=Wave">Wave</a>).</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<footer>
-  <div class="footer-content">
+    <h2>Education</h2>
+    <div class="education"> 
+      <h3>Software Engineering (Master) </h3>
+      <p>Taras Shevchenko National University of Kyiv</p>
+      <p>2021 - 2023</p>
+    </div>
+    <div class="education"> 
+      <h3>Software Engineering (Bachelor) </h3>
+      <p>Taras Shevchenko National University of Kyiv</p>
+      <p>2017 - 2021</p>
+    </div>
+  </main>
+
+  <footer>
+    <div class="footer-content">
       <div class="footer-links">
-          <h3>Quick Links</h3>
-          <ul>
-              <li><a href="about.html">About Me</a></li>
-              <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="contact.html">Contact</a></li>
-          </ul>
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
       </div>
       <div class="footer-contact">
         <h3>Contact Me</h3>
         <p>Email: <a href="mailto:artes5kgc@gmail.com">artes5kgc@gmail.com</a></p>
         <p>Phone: <a href="tel:+17819647620">+1 (781) 964-7620</a></p>
         <div class="social-links">
-            <a href="https://linkedin.com/in/arturkashuba" target="_blank">LinkedIn</a>
-            <a href="https://github.com/arturkashuba" target="_blank">GitHub</a>
-            <a href="https://www.upwork.com/freelancers/arturk98" target="_blank">Upwork</a>
+          <a href="https://linkedin.com/in/arturkashuba" target="_blank">LinkedIn</a>
+          <a href="https://github.com/arturkashuba" target="_blank">GitHub</a>
+          <a href="https://www.upwork.com/freelancers/arturk98" target="_blank">Upwork</a>
         </div>
+      </div>
     </div>
-  </div>
-  <div class="footer-bottom">
+    <div class="footer-bottom">
       <p>&copy; 2025 Artur Kashuba. All rights reserved.</p>
-  </div>
-</footer>
+    </div>
+  </footer>
 
+</body>
 </html>
