--- a/project.html
+++ b/project.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Details</title>
     <link rel="stylesheet" href="css/pages/project.css">
-    <script src="js/project.js" defer></script> <!-- Defer script loading to improve page load performance -->
+    <script src="js/project.js" defer></script>
 </head>
 <body>
 
