--- a/project.html
+++ b/project.html
@@ -38,6 +38,8 @@
     </section>
     <section class="details-section">
       <h2>About Project</h2>
+      <video controls="" width="300" class="video"></video>
+      
       <p class="detailed-description">
         <!-- Detailed description dynamically added here -->
       </p>
