--- a/project.html
+++ b/project.html
@@ -36,10 +36,15 @@
         </div>
       </aside>
     </section>
+  
     <section class="details-section">
+      <h2>Links</h2>
+      <div class="project-links">
+        <!-- Links will be dynamically inserted here -->
+    </div>
+
       <h2>About Project</h2>
       <video controls="" width="300" class="video"></video>
-      
       <p class="detailed-description">
         <!-- Detailed description dynamically added here -->
       </p>
